[tool.poetry]
name = "mapknowledge"
version = "0.9.0"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>", "Tom Gillespie <tom.h.gillespie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "*"
requests = "*"
rdflib = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
