[tool.poetry]
name = "mapknowledge"
version = "0.14.0"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>", "Tom Gillespie <tom.h.gillespie@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
networkx = "^2.8.8"
requests = "^2.28.1"
rdflib = "^6.2.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
